update with expo

--- a/app.json
+++ b/app.json
@@ -24,6 +24,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "e944b404-ce13-42ec-9f82-b0a69b277587"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/e944b404-ce13-42ec-9f82-b0a69b277587"
     }
   }
 }
